--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="box">
+            <div class="shadow"></div>
+            <div class="content"></div>
+        </div>
+    </div>
 </body>
 </html>
