--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
     <div class="container">
         <div class="box">
+            <div class="cover"></div>
             <div class="shadow"></div>
-            <div class="content"></div>
+            <div class="content">
+                <div class="form">
+                    <h3 class="logo"></h3>
+                    <h2>Sign In</h2>
+                </div>
+            </div>
         </div>
     </div>
 </body>
