done upto basic structure of form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,22 @@
                 <div class="form">
                     <h3 class="logo"></h3>
                     <h2>Sign In</h2>
+
+                    <div class="inputBox">
+                        <input type="email" name="" id="" required>
+                        <span>Username</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="password" name="" id="" required>
+                        <span>Password</span>
+                    </div>
+                    <div class="links">
+                        <a href="#">Forget Password?</a>
+                        <a href="#">Sign up</a>
+                    </div>
+                    <div class="inputBox">
+                        <input type="submit" value="Login">
+                    </div>
                 </div>
             </div>
         </div>
