added fontawesome icons

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
             <div class="shadow"></div>
             <div class="content">
                 <div class="form">
-                    <h3 class="logo"></h3>
+                    <h3 class="logo"><i class="fa-solid fa-key"></i></h3>
                     <h2>Sign In</h2>
 
                     <div class="inputBox">
                         <input type="email" name="" id="" required>
+                        <i class="fa-solid fa-user"></i>
                         <span>Username</span>
                     </div>
                     <div class="inputBox">
                         <input type="password" name="" id="" required>
+                        <i class="fa-solid fa-lock"></i>
                         <span>Password</span>
                     </div>
                     <div class="links">
-                        <a href="#">Forget Password?</a>
-                        <a href="#">Sign up</a>
+                        <a href="#"><i class="fa-solid fa-question"></i> Forget Password?</a>
+                        <a href="#"><i class="fa-solid fa-user-plus"></i> Sign up</a>
                     </div>
                     <div class="inputBox">
                         <input type="submit" value="Login">
