--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#"><i class="fa-solid fa-user-plus"></i> Sign up</a>
                     </div>
                     <div class="inputBox">
-                        <input type="submit" value="Login">
+                        <input type="submit" class="button" value="Login">
                     </div>
                 </div>
             </div>
